@@ -1,6 +1,5 @@
 package com.example.rces.controller.mvc;
 
-import com.example.rces.configuration.DeviceDetector;
 import com.example.rces.dto.CreateRequestDto;
 import com.example.rces.dto.RequestDto;
 import com.example.rces.dto.RequestHistoryDTO;
@@ -8,10 +7,10 @@ import com.example.rces.dto.SubDivisionDTO;
 import com.example.rces.mapper.SubDivisionMapper;
 import com.example.rces.models.Employee;
 import com.example.rces.models.Requests;
+import com.example.rces.service.EmployeeService;
 import com.example.rces.service.RequestHistoryService;
 import com.example.rces.service.RequestsService;
 import com.fasterxml.jackson.core.JsonProcessingException;
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -22,8 +21,8 @@ import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.example.rces.service.impl.CustomUserDetailsServiceImpl.currentUser;
 import static com.example.rces.utils.DateUtil.formatedDate;
@@ -32,18 +31,19 @@ import static com.example.rces.utils.DateUtil.formatedDate;
 @Controller
 public class RequestController {
 
-    private final DeviceDetector detector;
     private final RequestsService requestsService;
     private final SubDivisionMapper subDivisionMapper;
     private final RequestHistoryService requestHistoryService;
+    private final EmployeeService employeeService;
 
     @Autowired
-    public RequestController(DeviceDetector detector, RequestsService requestsService,
-                             SubDivisionMapper subDivisionMapper, RequestHistoryService requestHistoryService) {
-        this.detector = detector;
+    public RequestController(RequestsService requestsService,
+                             SubDivisionMapper subDivisionMapper, RequestHistoryService requestHistoryService,
+                             EmployeeService employeeService) {
         this.requestsService = requestsService;
         this.subDivisionMapper = subDivisionMapper;
         this.requestHistoryService = requestHistoryService;
+        this.employeeService = employeeService;
     }
 
     @GetMapping("/create")
@@ -77,39 +77,35 @@ public class RequestController {
     public String getViewBidForm(@PathVariable("requestNumber") Integer requestNumber, Model model) {
         Requests requests = requestsService.findByRequestNumber(requestNumber);
         Employee user = currentUser().orElseThrow();
-        boolean canChangeEmployee = false;
-        if (requests.getEmployee() == null) {
-            canChangeEmployee = true;
-        } else if (requests.getEmployee() != null && user.getRole().equals("CONTROL")) {
-            canChangeEmployee = true;
-        }
+
         List<RequestHistoryDTO> requestHistoryDTOList = new ArrayList<>();
         if (requests.getQtyRejected() > 0) {
             requestHistoryDTOList = requestHistoryService.getRequestHistory(requests.getId());
         }
-        model.addAttribute("canChangeEmployee", canChangeEmployee);
+
         model.addAttribute("bid", requests);
         model.addAttribute("type", requests.getTypeRequest());
         model.addAttribute("date", formatedDate(requests.getCreatedDate()));
         model.addAttribute("viewForm", true);
         model.addAttribute("requestHistoryDTOList", requestHistoryDTOList);
+        model.addAttribute("employeeMaster", employeeService.findAllByRole("MASTER"));
         model.addAttribute("role", user.getRole());
         return "/requests";
+
     }
 
     @GetMapping("/requestslist/{type}")
     public String getRequestList(@PathVariable String type,
-                                 HttpServletRequest httpRequest,
                                  Model model) {
-        if (detector.isMobile(httpRequest)) {
-            return "/mobiledevice";
-        }
-        List<Requests> requestsList = requestsService.findAllByTypeRequest(Requests.Type.valueOf(type));
+        List<Requests> requestsList = requestsService.findAllByTypeRequest(Requests.Type.valueOf(type)).stream()
+                .sorted(Comparator.comparing(Requests::getRequestNumber).reversed())
+                .toList();
         List<String> formattedDates = requestsList.stream()
                 .map(request -> formatedDate(request.getCreatedDate()))
-                .collect(Collectors.toList());
+                .toList();
         List<String> updateDate = requestsList.stream()
-                .map(requests -> requests.getUpdatedDate().atZone(ZoneId.of("UTC")).format(DateTimeFormatter.ofPattern("dd.MM.yyyy HH:mm"))).toList();
+                .map(requests -> requests.getUpdatedDate().atZone(ZoneId.of("UTC")).format(DateTimeFormatter.ofPattern("dd.MM.yyyy HH:mm")))
+                .toList();
 
         model.addAttribute("requestsList", requestsList);
         model.addAttribute("typeRequest", type);
